@@ -810,6 +810,84 @@ displayed</description>
 </directivesynopsis>
 
 <directivesynopsis>
+<name>SSIETag</name>
+<description>Controls whether ETags are generated by the server.</description>
+<syntax>SSIETag on|off</syntax>
+<default>SSIETag off</default>
+<contextlist><context>directory</context><context>.htaccess</context></contextlist>
+
+<usage>
+      <p>Under normal circumstances, a file filtered by <module>mod_include</module>
+        may contain elements that are either dynamically generated, or that may
+        have changed independently of the original file. As a result, by default
+        the server is asked not to generate an <code>ETag</code> header for the
+        response by adding <code>no-etag</code> to the request notes.</p>
+
+      <p>The <directive>SSIETag</directive> directive suppresses this
+        behaviour, and allows the server to generate an <code>ETag</code> header.
+        This can be used to enable caching of the output. Note that a backend server
+        or dynamic content generator may generate an ETag of its own, ignoring
+        <code>no-etag</code>, and this ETag will be passed by
+        <module>mod_include</module> regardless of the value of this setting.
+        <directive>SSIETag</directive> can take on the following values:</p>
+
+      <dl>
+
+        <dt><code>off</code></dt>
+        <dd><code>no-etag</code> will be added to the request notes, and the server
+          is asked not to generate an ETag. Where a server ignores the value of
+          <code>no-etag</code> and generates an ETag anyway, the ETag will be
+          respected.</dd>
+
+        <dt><code>on</code></dt>
+        <dd>Existing ETags will be respected, and ETags generated by the server will
+          be passed on in the response.</dd>
+
+      </dl>
+
+</usage>
+</directivesynopsis>
+
+<directivesynopsis>
+<name>SSILastModified</name>
+<description>Controls whether <code>Last-Modified</code> headers are generated by the
+server.</description>
+<syntax>SSILastModified on|off</syntax>
+<default>SSILastModified off</default>
+<contextlist><context>directory</context><context>.htaccess</context></contextlist>
+
+<usage>
+      <p>Under normal circumstances, a file filtered by <module>mod_include</module>
+        may contain elements that are either dynamically generated, or that may
+        have changed independently of the original file. As a result, by default
+        the <code>Last-Modified</code> header is stripped from the response.</p>
+
+      <p>The <directive>SSILastModified</directive> directive overrides this
+        behaviour, and allows the <code>Last-Modified</code> header to be respected
+        if already present, or set if the header is not already present. This can
+        be used to enable caching of the output. <directive>SSILastModified</directive>
+        can take on the following values:</p>
+      
+      <dl>
+        
+        <dt><code>off</code></dt>
+        <dd>The <code>Last-Modified</code> header will be stripped from responses,
+          unless the <directive module="mod_include">XBitHack</directive> directive
+          is set to <code>full</code> as described below.</dd>
+        
+        <dt><code>on</code></dt>
+        <dd>The <code>Last-Modified</code> header will be respected if already
+          present in a response, and added to the response if the response is a
+          file and the header is missing. The
+          <directive module="mod_include">SSILastModified</directive> directive
+          takes precedence over <directive module="mod_include">XBitHack</directive>.</dd>
+        
+      </dl>
+      
+</usage>
+</directivesynopsis>
+  
+<directivesynopsis>
 <name>XBitHack</name>
 <description>Parse SSI directives in files with the execute bit
 set</description>
@@ -846,7 +924,14 @@ set</description>
       group-execute bit is unset for every SSI script which might <code
       >#include</code> a CGI or otherwise produces different output on
       each hit (or could potentially change on subsequent requests).</p>
+      
+      <p>The <directive module="mod_include">SSILastModified</directive>
+      directive takes precedence over the
+      <directive module="mod_include">XBitHack</directive> directive when
+      <directive module="mod_include">SSILastModified</directive> is set to
+      <code>on</code>.</p>
       </note>
+
       </dd>
     </dl>
 
